<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="24dp">

    <EditText
        android:id="@+id/et_task_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_task_hint"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/et_task_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_details_hint"
        android:inputType="text"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/et_task_title"
        android:importantForAutofill="no" />

    <ImageButton
        android:id="@+id/button_show_details"
        android:src="@drawable/icon_details"
        android:background="@null"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_task_details"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/add_details_button" />

    <ImageButton
        android:id="@+id/button_star_task"
        android:src="@drawable/icon_star"
        android:background="@null"
        android:layout_marginStart="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/button_show_details"
        app:layout_constraintStart_toEndOf="@id/button_show_details"
        android:contentDescription="@string/star_task_button" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintTop_toTopOf="@id/button_show_details"
        app:layout_constraintBottom_toBottomOf="@id/button_show_details"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>